crates/unsoundness_checker/tests/snapshots/rules/callable_ellipsis_used/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
warning[callable-ellipsis-used]: Using `...` in `Callable` type annotations can lead to runtime type errors.
 --> main.py:3:19
  |
1 | from typing import Callable
2 |
3 | def foo(callback: Callable[..., int]) -> int:
  |                   ^^^^^^^^^^^^^^^^^^
4 |     return callback("wrong", "types")
  |
info: rule `callable-ellipsis-used` was selected in the configuration file
